--- a/kleisli.tex
+++ b/kleisli.tex
@@ -109,7 +109,7 @@ functions $f_1, f_3$ are partially defined.
 
 \subsection{Haskell example}
 
-\begin{example}[Maybe monad][\textbf{Hask}]
+\begin{example}[Maybe monad][$\cat{Hask}$]
 \label{ex:maybe_monad_haskell}
 The Maybe monad can be implemented as follows
 \begin{minted}{haskell}
@@ -226,7 +226,7 @@ for it.
 
 \subsection{Haskell example}
 
-\begin{example}[List monad][\textbf{Hask}]
+\begin{example}[List monad][$\cat{Hask}$]
 \label{ex:list_monad_haskell}
 \begin{minted}{haskell}
   instance Monad [] where
