--- a/monoidalobject.tex
+++ b/monoidalobject.tex
@@ -3,7 +3,7 @@
 
 Monoid plays very important role in category theory
 
-\section{Monoid in \textbf{Set}}
+\section{Monoid in $\cat{Set}$}
 Lets consider \mynameref{def:monoid} in the terms of Set theory and
 will try to give the definition that is based rather on morphisms then
 on internal set structure. Consider a set $M$ and by the definition
