--- a/nt.tex
+++ b/nt.tex
@@ -450,13 +450,13 @@ TBD
 \end{proof}
 \end{theorem}
 
-\subsection{\textbf{Hask} category}
+\subsection{$\cat{Hask}$ category}
 
 In Haskell most of functions are \mynameref{def:pp_function}s 
 \footnote{really in the run-time the functions are not
   \mynameref{def:pp_function}s}.  
 
-\begin{example}[Parametrically polymorphic function][\textbf{Hask}]
+\begin{example}[Parametrically polymorphic function][$\cat{Hask}$]
 \label{ex:nt_hask}
 Consider the following function
 \begin{minted}{haskell}
