--- a/monads.tex
+++ b/monads.tex
@@ -7,7 +7,7 @@ consideration, continue with the formal mathematical definition for
 monad and
 will finish with programming languages examples later.
 
-\section{Monoid in \textbf{Set} category}
+\section{Monoid in $\cat{Set}$ category}
 We are going to consider \mynameref{def:monoid} in the terms of Set theory and
 will try to give the definition that is based rather on morphisms then
 on internal set structure i.e. we will use
@@ -445,7 +445,7 @@ and light is represented as the tensor product $\mathcal{H}_{at}
 \otimes \mathcal{H}_f$.
 
 \begin{remark}[Hilbert-Schmidt correspondence]
-The morphisms of \textbf{FdHilb} category have a connection with
+The morphisms of $\cat{FdHilb}$ category have a connection with
 \mynameref{def:tensor_product}. Consider the so called Hilbert-Schmidt
 correspondence for finite dimensional Hilbert spaces i.e. for given
 $\mathcal{A}$ and $\mathcal{B}$ there is a natural isomorphism between
@@ -640,7 +640,7 @@ different programming languages:
 
 \subsection{Haskell}
 
-\begin{example}[Monad][\textbf{Hask}]
+\begin{example}[Monad][$\cat{Hask}$]
 \label{ex:monad_haskell}
 In Haskell monad can be defined from \mynameref{ex:functor_haskell} as follows 
 \footnote{real definition is quite different from the presented one}
