--- a/notations.tex
+++ b/notations.tex
@@ -1,5 +1,11 @@
 %% -*- coding:utf-8 -*-
 \renewcommand{\nomname}{Notations}
+\nomenclature{$\cat{Set}$}{\mynameref{def:setcategory}}
+\nomenclature{$\cat{Rel}$}{\mynameref{def:relcategory}}
+\nomenclature{$\cat{FdHilb}$}{\mynameref{def:fdhilbcategory}}
+\nomenclature{$\cat{Hask}$}{\mynameref{def:haskcategory}}
+\nomenclature{$\cat{Scala}$}{\mynameref{def:scalacategory}}
+\nomenclature{$\cat{C++}$}{\mynameref{def:cppcategory}}
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
 \nomenclature{$f, g, h$}{\mynameref{def:morphism} (Latin small
   letter)}
