Categories names refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -800,16 +800,16 @@ The function is pure if it's execution give the same results
 independently from the environment. 
 \end{definition}
 
-\begin{definition}[\textbf{Scala} category]
+\begin{definition}[$\cat{Scala}$ category]
 \label{def:scalacategory}
-The objects in the \textbf{Scala} category are Scala types and
+The objects in the $\cat{Scala}$ category are Scala types and
 morphisms are functions. We don't define functions that have a state
 in the category. I.e. the functions are \mynameref{def:pure_function}s. 
 \end{definition}
 
-\begin{definition}[\textbf{C++} category]
+\begin{definition}[$\cat{C++}$ category]
 \label{def:cppcategory}
-The objects in the \textbf{C++} category are Scala types and
+The objects in the $\cat{C++}$ category are Scala types and
 morphisms are functions. We don't define functions that have a state
 in the category. I.e. the functions are \mynameref{def:pure_function}s. 
 \end{definition}
@@ -920,11 +920,11 @@ several functions between them (see \cref{fig:pl_example}).
   \eqref{eq:rightid} are not satisfied.  
 \end{remark}
 
-\subsection{\textbf{C++} toy category}
-\begin{example}[\textbf{C++} toy category]
+\subsection{$\cat{C++}$ toy category}
+\begin{example}[$\cat{C++}$ toy category]
   \label{ex:cppcategory}
-  \index{Object!\textbf{C++} example}
-  \index{Morphism!\textbf{C++} example}
+  \index{Object!$\cat{C++}$ example}
+  \index{Morphism!$\cat{C++}$ example}
   We will use the same trick as in \mynameref{ex:haskcategory} and
   will assume 
   types in C++ as \mynameref{def:object}s, 
@@ -976,11 +976,11 @@ several functions between them (see \cref{fig:pl_example}).
   use pure function (functions without effects).
 \end{example}
 
-\subsection{\textbf{Scala} toy category}
-\begin{example}[\textbf{Scala} toy category]
+\subsection{$\cat{Scala}$ toy category}
+\begin{example}[$\cat{Scala}$ toy category]
   \label{ex:scalacategory}
-  \index{Object!\textbf{Scala} example}
-  \index{Morphism!\textbf{Scala} example}
+  \index{Object!$\cat{Scala}$ example}
+  \index{Morphism!$\cat{Scala}$ example}
 
   We will use the same trick as in \mynameref{ex:haskcategory} and
   will assume 
@@ -1127,8 +1127,8 @@ direct sum.
 
 \begin{definition}[$\cat{FdHilb}$ category]
   \label{def:fdhilbcategory}
-  \index{Object!\textbf{FdHilb} category}
-  \index{Morphism!\textbf{FdHilb} category}
+  \index{Object!$\cat{FdHilb}$ category}
+  \index{Morphism!$\cat{FdHilb}$ category}
 
   Most common case in quantum mechanics is the case of quantum states
   in the finite dimensional Hilbert space. We can consider the set of
