--- a/curryhoward.tex
+++ b/curryhoward.tex
@@ -5,7 +5,7 @@ There is an interesting correspondence between computer programs and
 mathematical proofs. Different types of logic correspond to different
 computational models. This allows to build a theory of computation on
 the base of math logic. First of all consider a category of proofs
-\section{\textbf{Proof} category}
+\section{$\cat{Proof}$ category}
 \begin{definition}[Proposition]
 \label{def:proposition}
 \textit{Proposition} is a statement that either true or false.
@@ -115,7 +115,7 @@ i.e. the operation $\land$ corresponds to multiplication and $\lor$ to
 sum. Therefore the $\cat{Proof}$ can be considered as a
 \mynameref{def:distributive_category}. 
 
-\begin{definition}[\textbf{Proof} category]
+\begin{definition}[$\cat{Proof}$ category]
 \label{def:proof_category}
 The $\cat{Proof}$ category is a category where \mynameref{def:proposition}s are
 \mynameref{def:object}s and \mynameref{def:proof}s are
@@ -125,25 +125,25 @@ different propositions.
 
 Consider different objects and constructions of the proof (logic)
 theory from the categorical point of view
-\begin{example}[Initial object][\textbf{Proof}]
+\begin{example}[Initial object][$\cat{Proof}$]
 \label{ex:proof_initial_object}
 The \textit{false} statement can be considered as the initial object
 because for any other statement exists only one proof from the false
 statement to that one.
 \end{example}
 
-\begin{example}[Terminal object][\textbf{Proof}]
+\begin{example}[Terminal object][$\cat{Proof}$]
 \label{ex:proof_terminal_object}
 The \textit{true} statement can be considered as the terminal object
 \end{example}
 
-\begin{example}[Product][\textbf{Proof}]
+\begin{example}[Product][$\cat{Proof}$]
 \label{ex:proof_product}
 \mynameref{def:conjunction} can be considered as
 \mynameref{def:product} in \mynameref{def:proof_category}.
 \end{example}
 
-\begin{example}[Sum][\textbf{Proof}]
+\begin{example}[Sum][$\cat{Proof}$]
 \label{ex:proof_sum}
 \mynameref{def:disjunction} can be considered as
 \mynameref{def:sum} in \mynameref{def:proof_category}.
