--- a/functors.tex
+++ b/functors.tex
@@ -81,7 +81,7 @@ The functor can be defined in Haskell as follows
 \end{example}
 
 In Scala it can be defined in the same way
-\begin{example}[Functor][\textbf{Scala}]
+\begin{example}[Functor][$\cat{Scala}$]
   \label{ex:functor_scala}
   \begin{minted}{scala}
     trait Functor[F[_]] {
@@ -90,7 +90,7 @@ In Scala it can be defined in the same way
 \end{example}
 
 In C++ the definition differs
-\begin{example}[Functor][\textbf{C++}]
+\begin{example}[Functor][$\cat{C++}$]
   \label{ex:functor_cpp}
   In C++ templates can be considered as type constructors in Haskell
   and therefore can convert one type for another. For instance the
