--- a/kleisli.tex
+++ b/kleisli.tex
@@ -154,7 +154,7 @@ Nothing
 
 \subsection{C++ example}
 
-\begin{example}[Maybe monad][\textbf{C++}]
+\begin{example}[Maybe monad][$\cat{C++}$]
 \label{ex:maybe_monad_cpp}
 The Maybe monad can be implemented as follows
 \begin{minted}{c++}
