--- a/monads.tex
+++ b/monads.tex
@@ -695,7 +695,7 @@ M<B> bind(std::function< M<B> (A) > f, M<A> a) {
 
 \subsection{Scala}
 
-\begin{example}[Monad][\textbf{Scala}]
+\begin{example}[Monad][$\cat{Scala}$]
 The monad concept is Scala is more close to formal math definition for
 \mynameref{def:monad}. It can be defined as follows 
 \footnote{real definition is quite different from the presented one}
