--- a/notations.tex
+++ b/notations.tex
@@ -2,6 +2,7 @@
 \renewcommand{\nomname}{Notations}
 \nomenclature{$\cat{Set}$}{\mynameref{def:setcategory}}
 \nomenclature{$\cat{Rel}$}{\mynameref{def:relcategory}}
+\nomenclature{$\cat{Proof}$}{\mynameref{def:proof_category}}
 \nomenclature{$\cat{FdHilb}$}{\mynameref{def:fdhilbcategory}}
 \nomenclature{$\cat{Hask}$}{\mynameref{def:haskcategory}}
 \nomenclature{$\cat{Scala}$}{\mynameref{def:scalacategory}}
