--- a/nt.tex
+++ b/nt.tex
@@ -191,14 +191,14 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 
 \section{Operations with natural transformations}
 
-\begin{example}[\textbf{Fun} category]
+\begin{example}[$\cat{Fun}$ category]
 \label{ex:fun_category}
-\index{Object!\textbf{Fun} example}
-\index{Morphism!\textbf{Fun} example}
-\index{Category!\textbf{Fun} example}
+\index{Object!$\cat{Fun}$ example}
+\index{Morphism!$\cat{Fun}$ example}
+\index{Category!$\cat{Fun}$ example}
 
 The functors can be considered as objects in a special category
-\textbf{Fun}. The morphisms in the category are \mynameref{def:nt}s.
+$\cat{Fun}$. The morphisms in the category are \mynameref{def:nt}s.
 
 To define a category we need to define composition operation that
 satisfied \mynameref{axm:composition}, identity
