--- a/limits.tex
+++ b/limits.tex
@@ -172,7 +172,7 @@ morphisms between the objects which form a set: $\hom_{\cat{C}}(c_1,
 c_2)$. There is a subset of $\hom_{\cat{C}}(c_1, c_2)$ that can be
 called as cone's morphisms.
 \begin{definition}[Morphisms of cones]
-\begin{figure}[H]
+\begin{figure}
   \centering
   \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
           width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
