--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -233,7 +233,8 @@ Note that \mynameref{def:id} is unique, see
   \[
   g_1 = g_2
   \]
-  then $f$ is called \textit{monomorphism}.
+  then $f$ is called \textit{monomorphism}. The monomorphism between
+  $a$ and $b$ is denoted as $f: a \hookrightarrow b$
 \end{definition}
 
 \begin{definition}[Epimorphism]
