--- a/notations.tex
+++ b/notations.tex
@@ -11,6 +11,8 @@
 \nomenclature{$f, g, h$}{\mynameref{def:morphism} (Latin small
   letter)}
 \nomenclature{$f: a \to b$}{\mynameref{def:morphism} (simple arrow)}
+\nomenclature{$f: a \hookrightarrow b$}{\mynameref{def:monomorphism}
+  (hook arrow)}
 \nomenclature{$f \circ g$}{Morphism composition (circle dot)}
 \nomenclature{$\cat{C}$}{\mynameref{def:category} (bold capital Latin
   letter)}
